feat: add real FK relationships for course registration, teacher, and student login